--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Nature is TERRIFYING #6</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How To Wear Out Your Karma Faster? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>UNBOX &. TEST MY NEW. GOZNEY  TRED OVENS</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Profitable Traders Have This In Common...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>A Twitter (X) Metric That Predicts Stocks</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1036,7 +1036,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - What a strange lil life eh #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2591,7 +2591,7 @@
                     <div class="video-info">
                         <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Profitable Traders Have This In Common...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>A Twitter (X) Metric That Predicts Stocks</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>How To Wear Out Your Karma Faster? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9428,7 +9428,7 @@
                         <div class="video-info">
                             <h3>UNBOX &. TEST MY NEW. GOZNEY  TRED OVENS</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9659,7 +9659,7 @@
                         <div class="video-info">
                             <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Nature is TERRIFYING #6</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10540,7 +10540,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - What a strange lil life eh #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
