--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Profitable Traders Have This In Common...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Larry Connors 3 Day High Low Strategy (Rules and Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Tobi on World’s Most Expensive Road Trip 🤯</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Doing the Real Work for Your Inner Evolution</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>My Italian Pizza Set up for Caterings</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Master Cavatelli in Minutes! juliansisofo.com #pasta #freshpasta #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Try not to Cringe: DISNEY ADULTS 2</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Golf Swing Shoulder Mechanics. Do this if you want real transformation. (Deep Dive)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>How To Wear Out Your Karma Faster? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -541,7 +541,7 @@
                     <div class="video-info">
                         <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -794,7 +794,7 @@
                     <div class="video-info">
                         <h3>Foreseeing Death in 84 Days | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1047,7 +1047,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Covered this small indie band and everybody knew the words? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1058,7 +1058,7 @@
                     <div class="video-info">
                         <h3>Diversify Your Portfolio: Strategies for Market Volatility #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Profitable Traders Have This In Common...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Larry Connors 3 Day High Low Strategy (Rules and Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5930,7 +5930,7 @@
                         <div class="video-info">
                             <h3>Diversify Your Portfolio: Strategies for Market Volatility #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Doing the Real Work for Your Inner Evolution</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>How To Wear Out Your Karma Faster? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7997,7 +7997,7 @@
                         <div class="video-info">
                             <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8085,7 +8085,7 @@
                         <div class="video-info">
                             <h3>Foreseeing Death in 84 Days | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>My Italian Pizza Set up for Caterings</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Master Cavatelli in Minutes! juliansisofo.com #pasta #freshpasta #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>Golf Swing Shoulder Mechanics. Do this if you want real transformation. (Deep Dive)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Tobi on World’s Most Expensive Road Trip 🤯</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Try not to Cringe: DISNEY ADULTS 2</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10551,7 +10551,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Covered this small indie band and everybody knew the words? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
